...
          <Text
            className={`mt-1 ${activeRouteName === 'notice' ? 'text-main-500' : 'text-gray-400'}`}>
            공지
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          testID="Footer-profile-button"
          className="flex-1 items-center justify-center py-2"
          hitSlop={{ top: 8, bottom: 8, left: 8, right: 8 }}
          activeOpacity={1}
          onPressIn={profileScale.handlePressIn}
          onPressOut={profileScale.handlePressOut}
          onPress={() => navigateToTab('profile')}>
...
                fill={activeRouteName === 'profile' ? colors.main : colors.muted}
              />
            </Svg>
          </Animated.View>
          <Text
            className={`mt-1 ${activeRouteName === 'profile' ? 'text-main-500' : 'text-gray-400'}`}>
            프로필
          </Text>
        </TouchableOpacity>
      </Animated.View>
    </Animated.View>
  );
}
...
